--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -8,3 +8,16 @@
     max-width: 45%;
     height: auto;
 }
+
+.github-link {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+.github-link a {
+    text-decoration: none;
+}
+.github-link img {
+    width: 50px; 
+    height: 50px;
+}
